added boost_thread to linked libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCGAL_DISABLE_ROUNDING_MATH_CHECK")
 aux_source_directory(. SRC_LIST)
 add_executable(prog ${SRC_LIST})
 include_directories(/usr/include/libxml2)
-target_link_libraries( prog mlpack armadillo CGAL gmp mpfr)
+target_link_libraries( prog mlpack armadillo CGAL gmp mpfr boost_thread)
