--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
 aux_source_directory(. SRC_LIST)
 add_executable(prog ${SRC_LIST})
 include_directories(/usr/include/libxml2)
-target_link_libraries( prog mlpack armadillo CGAL gmp mpfr boost_thread pugixml)
+target_link_libraries( prog mlpack armadillo CGAL gmp mpfr pugixml)
 
